More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -379,6 +379,136 @@
     "chk = [[False] * N for _ in range(N)]\n",
     "count_paths(0, 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cnt : 2     0 ---> 2 ---> 1\n",
+      "cnt : 4     0 ---> 3 ----> 0 ---> 2 ---> 1\n",
+      "cnt : 3     0 ---> 3 ----> 2 ---> 1\n",
+      "cnt_list : [2, 3],   min_cnt : 2\n",
+      "\n",
+      "cnt : 1     0 ---> 2\n",
+      "cnt : 3     0 ---> 2 ----> 0 ---> 2\n",
+      "cnt : 3     0 ---> 2 ----> 3 ---> 2\n",
+      "cnt : 3     0 ---> 2 ----> 1 ---> 2\n",
+      "cnt : 2     0 ---> 3 ---> 2\n",
+      "cnt_list : [1, 3, 3, 3, 2],   min_cnt : 1\n",
+      "\n",
+      "cnt : 2     0 ---> 2 ---> 3\n",
+      "cnt : 1     0 ---> 3\n",
+      "cnt : 3     0 ---> 3 ----> 0 ---> 3\n",
+      "cnt : 3     0 ---> 3 ----> 4 ---> 3\n",
+      "cnt : 3     0 ---> 3 ----> 2 ---> 3\n",
+      "cnt_list : [2, 1, 3, 3, 3],   min_cnt : 1\n",
+      "\n",
+      "cnt : 4     0 ---> 2 ----> 0 ---> 3 ---> 4\n",
+      "cnt : 3     0 ---> 2 ----> 3 ---> 4\n",
+      "cnt : 2     0 ---> 3 ---> 4\n",
+      "cnt_list : [3, 2],   min_cnt : 2\n",
+      "\n",
+      "cnt : 2     1 ---> 2 ---> 1\n",
+      "cnt_list : [2],   min_cnt : 2\n",
+      "\n",
+      "cnt : 1     1 ---> 2\n",
+      "cnt : 3     1 ---> 2 ----> 0 ---> 2\n",
+      "cnt : 3     1 ---> 2 ----> 3 ---> 2\n",
+      "cnt : 3     1 ---> 2 ----> 1 ---> 2\n",
+      "cnt_list : [1, 3, 3, 3],   min_cnt : 1\n",
+      "\n",
+      "cnt : 2     1 ---> 2 ---> 3\n",
+      "cnt_list : [2],   min_cnt : 2\n",
+      "\n",
+      "cnt : 4     1 ---> 2 ----> 0 ---> 3 ---> 4\n",
+      "cnt : 3     1 ---> 2 ----> 3 ---> 4\n",
+      "cnt_list : [3],   min_cnt : 3\n",
+      "\n",
+      "cnt : 3     2 ---> 0 ----> 2 ---> 1\n",
+      "cnt : 4     2 ---> 0 ----> 3 ---> 2 ---> 1\n",
+      "cnt : 4     2 ---> 3 ----> 0 ---> 2 ---> 1\n",
+      "cnt : 3     2 ---> 3 ----> 2 ---> 1\n",
+      "cnt : 1     2 ---> 1\n",
+      "cnt : 3     2 ---> 1 ----> 2 ---> 1\n",
+      "cnt_list : [3, 3, 1, 3],   min_cnt : 1\n",
+      "\n",
+      "cnt : 2     2 ---> 0 ---> 2\n",
+      "cnt : 2     2 ---> 3 ---> 2\n",
+      "cnt : 2     2 ---> 1 ---> 2\n",
+      "cnt_list : [2, 2, 2],   min_cnt : 2\n",
+      "\n",
+      "cnt : 2     2 ---> 0 ---> 3\n",
+      "cnt : 1     2 ---> 3\n",
+      "cnt : 3     2 ---> 3 ----> 0 ---> 3\n",
+      "cnt : 3     2 ---> 3 ----> 4 ---> 3\n",
+      "cnt : 3     2 ---> 3 ----> 2 ---> 3\n",
+      "cnt : 3     2 ---> 1 ----> 2 ---> 3\n",
+      "cnt_list : [2, 1, 3, 3, 3, 3],   min_cnt : 1\n",
+      "\n",
+      "cnt : 4     2 ---> 0 ----> 2 ---> 3 ---> 4\n",
+      "cnt : 3     2 ---> 0 ----> 3 ---> 4\n",
+      "cnt : 2     2 ---> 3 ---> 4\n",
+      "cnt : 4     2 ---> 1 ----> 2 ---> 3 ---> 4\n",
+      "cnt_list : [3, 2],   min_cnt : 2\n",
+      "\n",
+      "cnt : 3     3 ---> 0 ----> 2 ---> 1\n",
+      "cnt : 4     3 ---> 0 ----> 3 ---> 2 ---> 1\n",
+      "cnt : 4     3 ---> 4 ----> 3 ---> 2 ---> 1\n",
+      "cnt : 2     3 ---> 2 ---> 1\n",
+      "cnt_list : [3, 2],   min_cnt : 2\n",
+      "\n",
+      "cnt : 2     3 ---> 0 ---> 2\n",
+      "cnt : 3     3 ---> 4 ----> 3 ---> 2\n",
+      "cnt : 1     3 ---> 2\n",
+      "cnt : 3     3 ---> 2 ----> 0 ---> 2\n",
+      "cnt : 3     3 ---> 2 ----> 3 ---> 2\n",
+      "cnt : 3     3 ---> 2 ----> 1 ---> 2\n",
+      "cnt_list : [2, 3, 1, 3, 3, 3],   min_cnt : 1\n",
+      "\n",
+      "cnt : 2     3 ---> 0 ---> 3\n",
+      "cnt : 2     3 ---> 4 ---> 3\n",
+      "cnt : 2     3 ---> 2 ---> 3\n",
+      "cnt_list : [2, 2, 2],   min_cnt : 2\n",
+      "\n",
+      "cnt : 4     3 ---> 0 ----> 2 ---> 3 ---> 4\n",
+      "cnt : 3     3 ---> 0 ----> 3 ---> 4\n",
+      "cnt : 1     3 ---> 4\n",
+      "cnt : 3     3 ---> 4 ----> 3 ---> 4\n",
+      "cnt : 4     3 ---> 2 ----> 0 ---> 3 ---> 4\n",
+      "cnt : 3     3 ---> 2 ----> 3 ---> 4\n",
+      "cnt_list : [3, 1, 3, 3],   min_cnt : 1\n",
+      "\n",
+      "cnt : 4     4 ---> 3 ----> 0 ---> 2 ---> 1\n",
+      "cnt : 3     4 ---> 3 ----> 2 ---> 1\n",
+      "cnt_list : [3],   min_cnt : 3\n",
+      "\n",
+      "cnt : 2     4 ---> 3 ---> 2\n",
+      "cnt_list : [2],   min_cnt : 2\n",
+      "\n",
+      "cnt : 1     4 ---> 3\n",
+      "cnt : 3     4 ---> 3 ----> 0 ---> 3\n",
+      "cnt : 3     4 ---> 3 ----> 4 ---> 3\n",
+      "cnt : 3     4 ---> 3 ----> 2 ---> 3\n",
+      "cnt_list : [1, 3, 3, 3],   min_cnt : 1\n",
+      "\n",
+      "cnt : 2     4 ---> 3 ---> 4\n",
+      "cnt_list : [2],   min_cnt : 2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(N):\n",
+    "    for j in range(1, N):\n",
+    "        print(f\"From {i} TO {j}\")\n",
+    "        count_paths(i, j)\n",
+    "        print()"
+   ]
   }
  ],
  "metadata": {
