--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -382,18 +382,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "From 0 TO 1\n",
       "cnt : 2     0 ---> 2 ---> 1\n",
       "cnt : 4     0 ---> 3 ----> 0 ---> 2 ---> 1\n",
       "cnt : 3     0 ---> 3 ----> 2 ---> 1\n",
       "cnt_list : [2, 3],   min_cnt : 2\n",
       "\n",
+      "From 0 TO 2\n",
       "cnt : 1     0 ---> 2\n",
       "cnt : 3     0 ---> 2 ----> 0 ---> 2\n",
       "cnt : 3     0 ---> 2 ----> 3 ---> 2\n",
@@ -401,6 +403,7 @@
       "cnt : 2     0 ---> 3 ---> 2\n",
       "cnt_list : [1, 3, 3, 3, 2],   min_cnt : 1\n",
       "\n",
+      "From 0 TO 3\n",
       "cnt : 2     0 ---> 2 ---> 3\n",
       "cnt : 1     0 ---> 3\n",
       "cnt : 3     0 ---> 3 ----> 0 ---> 3\n",
@@ -408,40 +411,29 @@
       "cnt : 3     0 ---> 3 ----> 2 ---> 3\n",
       "cnt_list : [2, 1, 3, 3, 3],   min_cnt : 1\n",
       "\n",
+      "From 0 TO 4\n",
       "cnt : 4     0 ---> 2 ----> 0 ---> 3 ---> 4\n",
       "cnt : 3     0 ---> 2 ----> 3 ---> 4\n",
       "cnt : 2     0 ---> 3 ---> 4\n",
       "cnt_list : [3, 2],   min_cnt : 2\n",
       "\n",
-      "cnt : 2     1 ---> 2 ---> 1\n",
-      "cnt_list : [2],   min_cnt : 2\n",
-      "\n",
+      "From 1 TO 2\n",
       "cnt : 1     1 ---> 2\n",
       "cnt : 3     1 ---> 2 ----> 0 ---> 2\n",
       "cnt : 3     1 ---> 2 ----> 3 ---> 2\n",
       "cnt : 3     1 ---> 2 ----> 1 ---> 2\n",
       "cnt_list : [1, 3, 3, 3],   min_cnt : 1\n",
       "\n",
+      "From 1 TO 3\n",
       "cnt : 2     1 ---> 2 ---> 3\n",
       "cnt_list : [2],   min_cnt : 2\n",
       "\n",
+      "From 1 TO 4\n",
       "cnt : 4     1 ---> 2 ----> 0 ---> 3 ---> 4\n",
       "cnt : 3     1 ---> 2 ----> 3 ---> 4\n",
       "cnt_list : [3],   min_cnt : 3\n",
       "\n",
-      "cnt : 3     2 ---> 0 ----> 2 ---> 1\n",
-      "cnt : 4     2 ---> 0 ----> 3 ---> 2 ---> 1\n",
-      "cnt : 4     2 ---> 3 ----> 0 ---> 2 ---> 1\n",
-      "cnt : 3     2 ---> 3 ----> 2 ---> 1\n",
-      "cnt : 1     2 ---> 1\n",
-      "cnt : 3     2 ---> 1 ----> 2 ---> 1\n",
-      "cnt_list : [3, 3, 1, 3],   min_cnt : 1\n",
-      "\n",
-      "cnt : 2     2 ---> 0 ---> 2\n",
-      "cnt : 2     2 ---> 3 ---> 2\n",
-      "cnt : 2     2 ---> 1 ---> 2\n",
-      "cnt_list : [2, 2, 2],   min_cnt : 2\n",
-      "\n",
+      "From 2 TO 3\n",
       "cnt : 2     2 ---> 0 ---> 3\n",
       "cnt : 1     2 ---> 3\n",
       "cnt : 3     2 ---> 3 ----> 0 ---> 3\n",
@@ -450,31 +442,14 @@
       "cnt : 3     2 ---> 1 ----> 2 ---> 3\n",
       "cnt_list : [2, 1, 3, 3, 3, 3],   min_cnt : 1\n",
       "\n",
+      "From 2 TO 4\n",
       "cnt : 4     2 ---> 0 ----> 2 ---> 3 ---> 4\n",
       "cnt : 3     2 ---> 0 ----> 3 ---> 4\n",
       "cnt : 2     2 ---> 3 ---> 4\n",
       "cnt : 4     2 ---> 1 ----> 2 ---> 3 ---> 4\n",
       "cnt_list : [3, 2],   min_cnt : 2\n",
       "\n",
-      "cnt : 3     3 ---> 0 ----> 2 ---> 1\n",
-      "cnt : 4     3 ---> 0 ----> 3 ---> 2 ---> 1\n",
-      "cnt : 4     3 ---> 4 ----> 3 ---> 2 ---> 1\n",
-      "cnt : 2     3 ---> 2 ---> 1\n",
-      "cnt_list : [3, 2],   min_cnt : 2\n",
-      "\n",
-      "cnt : 2     3 ---> 0 ---> 2\n",
-      "cnt : 3     3 ---> 4 ----> 3 ---> 2\n",
-      "cnt : 1     3 ---> 2\n",
-      "cnt : 3     3 ---> 2 ----> 0 ---> 2\n",
-      "cnt : 3     3 ---> 2 ----> 3 ---> 2\n",
-      "cnt : 3     3 ---> 2 ----> 1 ---> 2\n",
-      "cnt_list : [2, 3, 1, 3, 3, 3],   min_cnt : 1\n",
-      "\n",
-      "cnt : 2     3 ---> 0 ---> 3\n",
-      "cnt : 2     3 ---> 4 ---> 3\n",
-      "cnt : 2     3 ---> 2 ---> 3\n",
-      "cnt_list : [2, 2, 2],   min_cnt : 2\n",
-      "\n",
+      "From 3 TO 4\n",
       "cnt : 4     3 ---> 0 ----> 2 ---> 3 ---> 4\n",
       "cnt : 3     3 ---> 0 ----> 3 ---> 4\n",
       "cnt : 1     3 ---> 4\n",
@@ -482,29 +457,13 @@
       "cnt : 4     3 ---> 2 ----> 0 ---> 3 ---> 4\n",
       "cnt : 3     3 ---> 2 ----> 3 ---> 4\n",
       "cnt_list : [3, 1, 3, 3],   min_cnt : 1\n",
-      "\n",
-      "cnt : 4     4 ---> 3 ----> 0 ---> 2 ---> 1\n",
-      "cnt : 3     4 ---> 3 ----> 2 ---> 1\n",
-      "cnt_list : [3],   min_cnt : 3\n",
-      "\n",
-      "cnt : 2     4 ---> 3 ---> 2\n",
-      "cnt_list : [2],   min_cnt : 2\n",
-      "\n",
-      "cnt : 1     4 ---> 3\n",
-      "cnt : 3     4 ---> 3 ----> 0 ---> 3\n",
-      "cnt : 3     4 ---> 3 ----> 4 ---> 3\n",
-      "cnt : 3     4 ---> 3 ----> 2 ---> 3\n",
-      "cnt_list : [1, 3, 3, 3],   min_cnt : 1\n",
-      "\n",
-      "cnt : 2     4 ---> 3 ---> 4\n",
-      "cnt_list : [2],   min_cnt : 2\n",
       "\n"
      ]
     }
    ],
    "source": [
     "for i in range(N):\n",
-    "    for j in range(1, N):\n",
+    "    for j in range(i+1, N):\n",
     "        print(f\"From {i} TO {j}\")\n",
     "        count_paths(i, j)\n",
     "        print()"
