--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,6 +311,50 @@
     "                            print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {ccc} ---> {end}\")\n",
     "\n",
     "    print(f\"cnt_list : {cnt_list},   min_cnt : {min(cnt_list)}\")               \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_paths(start, end):\n",
+    "    \n",
+    "    cnt_list = []\n",
+    "    for c in relations_list[start]:\n",
+    "        if c == end :\n",
+    "            cnt = 1\n",
+    "            \n",
+    "            #print(f\"cnt : {cnt}     {start} ---> {end}\")\n",
+    "            cnt_list.append(cnt)\n",
+    "            \n",
+    "        cnt = 0\n",
+    "        cnt += 1\n",
+    "        if end in relations_list[c] :\n",
+    "            cnt += 1\n",
+    "            \n",
+    "            #print(f\"cnt : {cnt}     {start} ---> {c} ---> {end}\")\n",
+    "            cnt_list.append(cnt)\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "            #print(f\"row = {c}:  {end} is not in {relations_list[c]}:  cnt : {cnt}\")\n",
+    "            \n",
+    "            for cc in relations_list[c]:\n",
+    "                sub_cnt = 0\n",
+    "                if end in relations_list[cc]:  # and not chk[cc][end] and not chk[end][cc]을 생략! count_paths(0, 1)을 비교해봐라.\n",
+    "                    sub_cnt += 1\n",
+    "                                                 \n",
+    "                    #print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {end}\")\n",
+    "                    cnt_list.append(cnt + sub_cnt)\n",
+    "                else:\n",
+    "                    sub_cnt += 1\n",
+    "                    for ccc in relations_list[cc]:\n",
+    "                        if end in relations_list[ccc]:\n",
+    "                            sub_cnt += 1\n",
+    "                            #print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {ccc} ---> {end}\")\n",
+    "\n",
+    "    return min_cnt : {min(cnt_list)}\")               \n"
    ]
   },
   {
@@ -360,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -395,10 +439,6 @@
       "cnt : 2     0 ---> 3 ---> 4\n",
       "cnt_list : [3, 2],   min_cnt : 2\n",
       "\n",
-      "From 1 TO 1\n",
-      "cnt : 2     1 ---> 2 ---> 1\n",
-      "cnt_list : [2],   min_cnt : 2\n",
-      "\n",
       "From 1 TO 2\n",
       "cnt : 1     1 ---> 2\n",
       "cnt : 3     1 ---> 2 ----> 0 ---> 2\n",
@@ -414,21 +454,6 @@
       "cnt : 4     1 ---> 2 ----> 0 ---> 3 ---> 4\n",
       "cnt : 3     1 ---> 2 ----> 3 ---> 4\n",
       "cnt_list : [3],   min_cnt : 3\n",
-      "\n",
-      "From 2 TO 1\n",
-      "cnt : 3     2 ---> 0 ----> 2 ---> 1\n",
-      "cnt : 4     2 ---> 0 ----> 3 ---> 2 ---> 1\n",
-      "cnt : 4     2 ---> 3 ----> 0 ---> 2 ---> 1\n",
-      "cnt : 3     2 ---> 3 ----> 2 ---> 1\n",
-      "cnt : 1     2 ---> 1\n",
-      "cnt : 3     2 ---> 1 ----> 2 ---> 1\n",
-      "cnt_list : [3, 3, 1, 3],   min_cnt : 1\n",
-      "\n",
-      "From 2 TO 2\n",
-      "cnt : 2     2 ---> 0 ---> 2\n",
-      "cnt : 2     2 ---> 3 ---> 2\n",
-      "cnt : 2     2 ---> 1 ---> 2\n",
-      "cnt_list : [2, 2, 2],   min_cnt : 2\n",
       "\n",
       "From 2 TO 3\n",
       "cnt : 2     2 ---> 0 ---> 3\n",
@@ -446,28 +471,6 @@
       "cnt : 4     2 ---> 1 ----> 2 ---> 3 ---> 4\n",
       "cnt_list : [3, 2],   min_cnt : 2\n",
       "\n",
-      "From 3 TO 1\n",
-      "cnt : 3     3 ---> 0 ----> 2 ---> 1\n",
-      "cnt : 4     3 ---> 0 ----> 3 ---> 2 ---> 1\n",
-      "cnt : 4     3 ---> 4 ----> 3 ---> 2 ---> 1\n",
-      "cnt : 2     3 ---> 2 ---> 1\n",
-      "cnt_list : [3, 2],   min_cnt : 2\n",
-      "\n",
-      "From 3 TO 2\n",
-      "cnt : 2     3 ---> 0 ---> 2\n",
-      "cnt : 3     3 ---> 4 ----> 3 ---> 2\n",
-      "cnt : 1     3 ---> 2\n",
-      "cnt : 3     3 ---> 2 ----> 0 ---> 2\n",
-      "cnt : 3     3 ---> 2 ----> 3 ---> 2\n",
-      "cnt : 3     3 ---> 2 ----> 1 ---> 2\n",
-      "cnt_list : [2, 3, 1, 3, 3, 3],   min_cnt : 1\n",
-      "\n",
-      "From 3 TO 3\n",
-      "cnt : 2     3 ---> 0 ---> 3\n",
-      "cnt : 2     3 ---> 4 ---> 3\n",
-      "cnt : 2     3 ---> 2 ---> 3\n",
-      "cnt_list : [2, 2, 2],   min_cnt : 2\n",
-      "\n",
       "From 3 TO 4\n",
       "cnt : 4     3 ---> 0 ----> 2 ---> 3 ---> 4\n",
       "cnt : 3     3 ---> 0 ----> 3 ---> 4\n",
@@ -476,33 +479,13 @@
       "cnt : 4     3 ---> 2 ----> 0 ---> 3 ---> 4\n",
       "cnt : 3     3 ---> 2 ----> 3 ---> 4\n",
       "cnt_list : [3, 1, 3, 3],   min_cnt : 1\n",
-      "\n",
-      "From 4 TO 1\n",
-      "cnt : 4     4 ---> 3 ----> 0 ---> 2 ---> 1\n",
-      "cnt : 3     4 ---> 3 ----> 2 ---> 1\n",
-      "cnt_list : [3],   min_cnt : 3\n",
-      "\n",
-      "From 4 TO 2\n",
-      "cnt : 2     4 ---> 3 ---> 2\n",
-      "cnt_list : [2],   min_cnt : 2\n",
-      "\n",
-      "From 4 TO 3\n",
-      "cnt : 1     4 ---> 3\n",
-      "cnt : 3     4 ---> 3 ----> 0 ---> 3\n",
-      "cnt : 3     4 ---> 3 ----> 4 ---> 3\n",
-      "cnt : 3     4 ---> 3 ----> 2 ---> 3\n",
-      "cnt_list : [1, 3, 3, 3],   min_cnt : 1\n",
-      "\n",
-      "From 4 TO 4\n",
-      "cnt : 2     4 ---> 3 ---> 4\n",
-      "cnt_list : [2],   min_cnt : 2\n",
       "\n"
      ]
     }
    ],
    "source": [
     "for i in range(N):\n",
-    "    for j in range(1, N):\n",
+    "    for j in range(i+1, N):\n",
     "        print(f\"From {i} TO {j}\")\n",
     "        count_paths(i, j)\n",
     "        print()"
