More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -354,7 +354,7 @@
     "                            sub_cnt += 1\n",
     "                            #print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {ccc} ---> {end}\")\n",
     "\n",
-    "    return min_cnt : {min(cnt_list)}\")               \n"
+    "    return min_cnt : {min(cnt_list)}\")"
    ]
   },
   {
