--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
     "                            sub_cnt += 1\n",
     "                            #print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {ccc} ---> {end}\")\n",
     "\n",
-    "    return min_cnt : {min(cnt_list)}\")"
+    "    print(f\"cnt_list : {cnt_list},   min_cnt : {min(cnt_list)}\")               \n"
    ]
   },
   {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -412,74 +412,25 @@
      "output_type": "stream",
      "text": [
       "From 0 TO 1\n",
-      "cnt : 2     0 ---> 2 ---> 1\n",
-      "cnt : 4     0 ---> 3 ----> 0 ---> 2 ---> 1\n",
-      "cnt : 3     0 ---> 3 ----> 2 ---> 1\n",
       "cnt_list : [2, 3],   min_cnt : 2\n",
-      "\n",
       "From 0 TO 2\n",
-      "cnt : 1     0 ---> 2\n",
-      "cnt : 3     0 ---> 2 ----> 0 ---> 2\n",
-      "cnt : 3     0 ---> 2 ----> 3 ---> 2\n",
-      "cnt : 3     0 ---> 2 ----> 1 ---> 2\n",
-      "cnt : 2     0 ---> 3 ---> 2\n",
       "cnt_list : [1, 3, 3, 3, 2],   min_cnt : 1\n",
-      "\n",
       "From 0 TO 3\n",
-      "cnt : 2     0 ---> 2 ---> 3\n",
-      "cnt : 1     0 ---> 3\n",
-      "cnt : 3     0 ---> 3 ----> 0 ---> 3\n",
-      "cnt : 3     0 ---> 3 ----> 4 ---> 3\n",
-      "cnt : 3     0 ---> 3 ----> 2 ---> 3\n",
       "cnt_list : [2, 1, 3, 3, 3],   min_cnt : 1\n",
-      "\n",
       "From 0 TO 4\n",
-      "cnt : 4     0 ---> 2 ----> 0 ---> 3 ---> 4\n",
-      "cnt : 3     0 ---> 2 ----> 3 ---> 4\n",
-      "cnt : 2     0 ---> 3 ---> 4\n",
       "cnt_list : [3, 2],   min_cnt : 2\n",
-      "\n",
       "From 1 TO 2\n",
-      "cnt : 1     1 ---> 2\n",
-      "cnt : 3     1 ---> 2 ----> 0 ---> 2\n",
-      "cnt : 3     1 ---> 2 ----> 3 ---> 2\n",
-      "cnt : 3     1 ---> 2 ----> 1 ---> 2\n",
       "cnt_list : [1, 3, 3, 3],   min_cnt : 1\n",
-      "\n",
       "From 1 TO 3\n",
-      "cnt : 2     1 ---> 2 ---> 3\n",
       "cnt_list : [2],   min_cnt : 2\n",
-      "\n",
       "From 1 TO 4\n",
-      "cnt : 4     1 ---> 2 ----> 0 ---> 3 ---> 4\n",
-      "cnt : 3     1 ---> 2 ----> 3 ---> 4\n",
       "cnt_list : [3],   min_cnt : 3\n",
-      "\n",
       "From 2 TO 3\n",
-      "cnt : 2     2 ---> 0 ---> 3\n",
-      "cnt : 1     2 ---> 3\n",
-      "cnt : 3     2 ---> 3 ----> 0 ---> 3\n",
-      "cnt : 3     2 ---> 3 ----> 4 ---> 3\n",
-      "cnt : 3     2 ---> 3 ----> 2 ---> 3\n",
-      "cnt : 3     2 ---> 1 ----> 2 ---> 3\n",
       "cnt_list : [2, 1, 3, 3, 3, 3],   min_cnt : 1\n",
-      "\n",
       "From 2 TO 4\n",
-      "cnt : 4     2 ---> 0 ----> 2 ---> 3 ---> 4\n",
-      "cnt : 3     2 ---> 0 ----> 3 ---> 4\n",
-      "cnt : 2     2 ---> 3 ---> 4\n",
-      "cnt : 4     2 ---> 1 ----> 2 ---> 3 ---> 4\n",
       "cnt_list : [3, 2],   min_cnt : 2\n",
-      "\n",
       "From 3 TO 4\n",
-      "cnt : 4     3 ---> 0 ----> 2 ---> 3 ---> 4\n",
-      "cnt : 3     3 ---> 0 ----> 3 ---> 4\n",
-      "cnt : 1     3 ---> 4\n",
-      "cnt : 3     3 ---> 4 ----> 3 ---> 4\n",
-      "cnt : 4     3 ---> 2 ----> 0 ---> 3 ---> 4\n",
-      "cnt : 3     3 ---> 2 ----> 3 ---> 4\n",
-      "cnt_list : [3, 1, 3, 3],   min_cnt : 1\n",
-      "\n"
+      "cnt_list : [3, 1, 3, 3],   min_cnt : 1\n"
      ]
     }
    ],
@@ -487,8 +438,7 @@
     "for i in range(N):\n",
     "    for j in range(i+1, N):\n",
     "        print(f\"From {i} TO {j}\")\n",
-    "        count_paths(i, j)\n",
-    "        print()"
+    "        count_paths(i, j)        "
    ]
   }
  ],
