More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -440,6 +440,95 @@
     "        print(f\"From {i} TO {j}\")\n",
     "        count_paths(i, j)        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnt = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_paths(start, end):\n",
+    "    \n",
+    "    global cnt    \n",
+    "\n",
+    "    for c in relations_list[start]:\n",
+    "        if c == end :\n",
+    "            cnt += 1\n",
+    "            \n",
+    "            #print(f\"cnt : {cnt}     {start} ---> {end}\")            \n",
+    "            \n",
+    "        cnt += 1\n",
+    "        if end in relations_list[c] :\n",
+    "            cnt += 1\n",
+    "            \n",
+    "            #print(f\"cnt : {cnt}     {start} ---> {c} ---> {end}\")\n",
+    "            \n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "            #print(f\"row = {c}:  {end} is not in {relations_list[c]}:  cnt : {cnt}\")\n",
+    "            \n",
+    "            for cc in relations_list[c]:\n",
+    "                \n",
+    "                if end in relations_list[cc]:  # and not chk[cc][end] and not chk[end][cc]을 생략! count_paths(0, 1)을 비교해봐라.\n",
+    "                    cnt += 1\n",
+    "                                                 \n",
+    "                    #print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {end}\")\n",
+    "                    \n",
+    "                else:\n",
+    "                    cnt += 1\n",
+    "                    for ccc in relations_list[cc]:\n",
+    "                        if end in relations_list[ccc]:\n",
+    "                            sub_cnt += 1\n",
+    "                            #print(f\"cnt : {cnt + sub_cnt}     {start} ---> {c} ----> {cc} ---> {ccc} ---> {end}\")\n",
+    "\n",
+    "    print(f\"cnt_list : {cnt_list},   min_cnt : {min(cnt_list)}\")               \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_paths(start, end):\n",
+    "    \n",
+    "    global cnt    \n",
+    "\n",
+    "    for c in relations_list[start]:\n",
+    "        if c == end :\n",
+    "            cnt += 1\n",
+    "            \n",
+    "            #print(f\"cnt : {cnt}     {start} ---> {end}\")            \n",
+    "            \n",
+    "        cnt += 1\n",
+    "        if end in relations_list[c] :\n",
+    "            cnt += 1\n",
+    "            \n",
+    "            #print(f\"cnt : {cnt}     {start} ---> {c} ---> {end}\")\n",
+    "            \n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "            #print(f\"row = {c}:  {end} is not in {relations_list[c]}:  cnt : {cnt}\")\n",
+    "            count_paths(c, end)\n",
+    "\n",
+    "    return cnt               \n"
+   ]
   }
  ],
  "metadata": {
