--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -145,18 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "2",
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (120443344.py, line 9)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         new_friends_dict[k\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m [v\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m         new_friends_dict[k\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m]\u001b[39m.\u001b[39mappend(v)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m new_friends_dict\u001b[39m.\u001b[39mitems():\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mk\u001b[39m}\u001b[39;00m\u001b[39m : \u001b[39m\u001b[39m{\u001b[39;00mv\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 2"
+      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{k} : {v} : {new_friends_dict})\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
@@ -166,12 +163,17 @@
     "new_friends_dict = {}\n",
     "\n",
     "for i in range(M):\n",
-    "    k, v = map(int, input().split())\n",
+    "    k, v = map(int, input().split())    \n",
     "    if k not in new_friends_dict.keys():\n",
     "        new_friends_dict[k-1] = [v-1]\n",
+    "        print(f\"{k} : {v} : {new_friends_dict}\")\n",
     "    else:\n",
     "        new_friends_dict[k].append(v-1)\n",
-    "        \n",
+    "        print(f\"{k} : {v} : {new_friends_dict}\")\n",
+    "\n",
+    "\n",
+    "print() \n",
+    "print()       \n",
     "for k, v in new_friends_dict.items():\n",
     "    print(f\"{k} : {v}\")"
    ]
