More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -145,15 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (120443344.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{k} : {v} : {new_friends_dict})\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : 3 : {0: [2]}\n",
+      "1 : 4 : {0: [3]}\n",
+      "4 : 5 : {0: [3], 3: [4]}\n",
+      "4 : 3 : {0: [3], 3: [2]}\n",
+      "3 : 2 : {0: [3], 3: [2, 1]}\n",
+      "\n",
+      "\n",
+      "0 : [3]\n",
+      "3 : [2, 1]\n"
      ]
     }
    ],
@@ -168,7 +175,7 @@
     "        new_friends_dict[k-1] = [v-1]\n",
     "        print(f\"{k} : {v} : {new_friends_dict}\")\n",
     "    else:\n",
-    "        new_friends_dict[k].append(v-1)\n",
+    "        new_friends_dict[k-1] = new_friends_dict[k-1].append(v-1)\n",
     "        print(f\"{k} : {v} : {new_friends_dict}\")\n",
     "\n",
     "\n",
