--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -155,12 +155,18 @@
       "1 : 3 : {0: [2]}\n",
       "1 : 4 : {0: [3]}\n",
       "4 : 5 : {0: [3], 3: [4]}\n",
-      "4 : 3 : {0: [3], 3: [2]}\n",
-      "3 : 2 : {0: [3], 3: [2, 1]}\n",
-      "\n",
-      "\n",
-      "0 : [3]\n",
-      "3 : [2, 1]\n"
+      "4 : 3 : {0: [3], 3: [2]}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1389.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mk\u001b[39m}\u001b[39;00m\u001b[39m : \u001b[39m\u001b[39m{\u001b[39;00mv\u001b[39m}\u001b[39;00m\u001b[39m : \u001b[39m\u001b[39m{\u001b[39;00mnew_friends_dict\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         new_friends_dict[k\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m new_friends_dict[k\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m]\u001b[39m.\u001b[39mappend(v\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mk\u001b[39m}\u001b[39;00m\u001b[39m : \u001b[39m\u001b[39m{\u001b[39;00mv\u001b[39m}\u001b[39;00m\u001b[39m : \u001b[39m\u001b[39m{\u001b[39;00mnew_friends_dict\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1389.ipynb#X10sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m() \n",
+      "\u001b[1;31mKeyError\u001b[0m: 2"
      ]
     }
    ],
@@ -171,11 +177,11 @@
     "\n",
     "for i in range(M):\n",
     "    k, v = map(int, input().split())    \n",
-    "    if k not in new_friends_dict.keys():\n",
+    "    if k-1 not in new_friends_dict.keys():\n",
     "        new_friends_dict[k-1] = [v-1]\n",
     "        print(f\"{k} : {v} : {new_friends_dict}\")\n",
     "    else:\n",
-    "        new_friends_dict[k-1] = new_friends_dict[k-1].append(v-1)\n",
+    "        new_friends_dict[k-1].append(v-1)\n",
     "        print(f\"{k} : {v} : {new_friends_dict}\")\n",
     "\n",
     "\n",
