More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,6 +210,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(start, end):\n",
+    "    chk = [[False] * N for _ in range(N)]\n",
+    "    chk[start][0] = chk[0][start] = True\n",
+    "    \n",
+    "    dq = deque()\n",
+    "    dq.append((start, 0))   \n",
+    "    \n",
+    "    while dq:\n",
+    "        y, d = dq.popleft()\n",
+    "        if end == y:\n",
+    "            return d        \n",
+    "        nd = d + 1        \n",
+    "        for v in friends_dict[y]:            \n",
+    "            dq.append((v, nd))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
