More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -218,16 +218,19 @@
     "    chk = [[False] * N for _ in range(N)]\n",
     "    chk[start][0] = chk[0][start] = True\n",
     "    \n",
+    "    ans_list = []\n",
     "    dq = deque()\n",
     "    dq.append((start, 0))   \n",
     "    \n",
     "    while dq:\n",
     "        y, d = dq.popleft()\n",
     "        if end == y:\n",
-    "            return d        \n",
+    "            ans_list.append(d)        \n",
     "        nd = d + 1        \n",
     "        for v in friends_dict[y]:            \n",
-    "            dq.append((v, nd))"
+    "            dq.append((v, nd))\n",
+    "            \n",
+    "    return ans_list"
    ]
   },
   {
