More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,13 +224,23 @@
     "    \n",
     "    while dq:\n",
     "        y, d = dq.popleft()\n",
-    "        if end == y:\n",
-    "            ans_list.append(d)        \n",
+    "        if end == y:            \n",
+    "            ans_list.append(d) \n",
+    "            print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "            return ans_list\n",
+    "                   \n",
     "        nd = d + 1        \n",
     "        for v in friends_dict[y]:            \n",
-    "            dq.append((v, nd))\n",
-    "            \n",
-    "    return ans_list"
+    "            dq.append((v, nd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bfs(0, 2)"
    ]
   },
   {
