More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,16 +231,35 @@
     "                   \n",
     "        nd = d + 1        \n",
     "        for v in friends_dict[y]:            \n",
-    "            dq.append((v, nd))"
+    "            dq.append((v, nd))\n",
+    "            print(f\"dq : {dq}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y : 1,  d : 2,  ans_list : [2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bfs(0, 2)"
+    "bfs(0, 1)"
    ]
   },
   {
