More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,8 @@
     "    \n",
     "    ans_list = []\n",
     "    dq = deque()\n",
-    "    dq.append((start, 0))   \n",
+    "    dq.append((start, 0))\n",
+    "    print(f\"start : {start},  d : {d},  ans_list : {ans_list}\")   \n",
     "    \n",
     "    while dq:\n",
     "        y, d = dq.popleft()\n",
@@ -237,13 +238,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (3, 1)])\n",
+      "dq : deque([(3, 1), (0, 2)])\n",
+      "dq : deque([(3, 1), (0, 2), (1, 2)])\n",
+      "dq : deque([(3, 1), (0, 2), (1, 2), (3, 2)])\n",
+      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2)])\n",
+      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2)])\n",
+      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2), (4, 2)])\n",
+      "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3)])\n",
+      "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3), (3, 3)])\n",
       "y : 1,  d : 2,  ans_list : [2]\n"
      ]
     },
@@ -253,13 +264,35 @@
        "[2]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bfs(0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : [2, 3]\n",
+      "1 : [2]\n",
+      "2 : [0, 1, 3]\n",
+      "3 : [0, 2, 4]\n",
+      "4 : [3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in friends_dict.items():\n",
+    "    print(f\"{k} : {v}\")"
    ]
   },
   {
