More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
     "    ans_list = []\n",
     "    dq = deque()\n",
     "    dq.append((start, 0))\n",
-    "    print(f\"start : {start},  d : {d},  ans_list : {ans_list}\")   \n",
+    "    print(f\"start : {start},  end : {end},   d : 0,  ans_list : {ans_list}\")   \n",
     "    \n",
     "    while dq:\n",
     "        y, d = dq.popleft()\n",
@@ -238,13 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "start : 0,  d : 0,  ans_list : []\n",
       "dq : deque([(2, 1)])\n",
       "dq : deque([(2, 1), (3, 1)])\n",
       "dq : deque([(3, 1), (0, 2)])\n",
@@ -264,7 +265,7 @@
        "[2]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
