More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +225,8 @@
     "    \n",
     "    while dq:\n",
     "        y, d = dq.popleft()\n",
+    "        print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "        \n",
     "        if end == y:            \n",
     "            ans_list.append(d) \n",
     "            print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
@@ -238,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start : 0,  d : 0,  ans_list : []\n",
+      "start : 0,  end : 1,   d : 0,  ans_list : []\n",
       "dq : deque([(2, 1)])\n",
       "dq : deque([(2, 1), (3, 1)])\n",
       "dq : deque([(3, 1), (0, 2)])\n",
@@ -265,7 +267,7 @@
        "[2]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
