--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,8 @@
     "    ans_list = []\n",
     "    dq = deque()\n",
     "    dq.append((start, 0))\n",
-    "    print(f\"start : {start},  end : {end},   d : 0,  ans_list : {ans_list}\")   \n",
+    "    print(f\"start : {start},  end : {end},   d : 0,  ans_list : {ans_list}\")\n",
+    "    print()   \n",
     "    \n",
     "    while dq:\n",
     "        y, d = dq.popleft()\n",
@@ -235,12 +236,13 @@
     "        nd = d + 1        \n",
     "        for v in friends_dict[y]:            \n",
     "            dq.append((v, nd))\n",
-    "            print(f\"dq : {dq}\")"
+    "            print(f\"dq : {dq}\")\n",
+    "        print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -248,16 +250,21 @@
      "output_type": "stream",
      "text": [
       "start : 0,  end : 1,   d : 0,  ans_list : []\n",
+      "y : 0,  d : 0,  ans_list : []\n",
       "dq : deque([(2, 1)])\n",
       "dq : deque([(2, 1), (3, 1)])\n",
+      "y : 2,  d : 1,  ans_list : []\n",
       "dq : deque([(3, 1), (0, 2)])\n",
       "dq : deque([(3, 1), (0, 2), (1, 2)])\n",
       "dq : deque([(3, 1), (0, 2), (1, 2), (3, 2)])\n",
+      "y : 3,  d : 1,  ans_list : []\n",
       "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2)])\n",
       "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2)])\n",
       "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2), (4, 2)])\n",
+      "y : 0,  d : 2,  ans_list : []\n",
       "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3)])\n",
       "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3), (3, 3)])\n",
+      "y : 1,  d : 2,  ans_list : []\n",
       "y : 1,  d : 2,  ans_list : [2]\n"
      ]
     },
@@ -267,7 +274,7 @@
        "[2]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
