More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,15 +234,16 @@
     "            return ans_list\n",
     "                   \n",
     "        nd = d + 1        \n",
-    "        for v in friends_dict[y]:            \n",
-    "            dq.append((v, nd))\n",
-    "            print(f\"dq : {dq}\")\n",
+    "        for v in friends_dict[y]:\n",
+    "            if not chk[y][v] and not chk[v][y]:            \n",
+    "                dq.append((v, nd))\n",
+    "                print(f\"dq : {dq}\")\n",
     "        print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -250,20 +251,25 @@
      "output_type": "stream",
      "text": [
       "start : 0,  end : 1,   d : 0,  ans_list : []\n",
+      "\n",
       "y : 0,  d : 0,  ans_list : []\n",
       "dq : deque([(2, 1)])\n",
       "dq : deque([(2, 1), (3, 1)])\n",
+      "\n",
       "y : 2,  d : 1,  ans_list : []\n",
       "dq : deque([(3, 1), (0, 2)])\n",
       "dq : deque([(3, 1), (0, 2), (1, 2)])\n",
       "dq : deque([(3, 1), (0, 2), (1, 2), (3, 2)])\n",
+      "\n",
       "y : 3,  d : 1,  ans_list : []\n",
       "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2)])\n",
       "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2)])\n",
       "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2), (4, 2)])\n",
+      "\n",
       "y : 0,  d : 2,  ans_list : []\n",
       "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3)])\n",
       "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3), (3, 3)])\n",
+      "\n",
       "y : 1,  d : 2,  ans_list : []\n",
       "y : 1,  d : 2,  ans_list : [2]\n"
      ]
@@ -274,7 +280,7 @@
        "[2]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
