--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -235,7 +235,8 @@
     "                   \n",
     "        nd = d + 1        \n",
     "        for v in friends_dict[y]:\n",
-    "            if not chk[y][v] and not chk[v][y]:            \n",
+    "            if not chk[y][v] and not chk[v][y]:\n",
+    "                chk[y][v] = chk[v][y] = True            \n",
     "                dq.append((v, nd))\n",
     "                print(f\"dq : {dq}\")\n",
     "        print()"
@@ -281,6 +282,54 @@
       ]
      },
      "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bfs(0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start : 0,  end : 1,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 0,  d : 0,  ans_list : []\n",
+      "dq : deque([(2, 1)])\n",
+      "dq : deque([(2, 1), (3, 1)])\n",
+      "\n",
+      "y : 2,  d : 1,  ans_list : []\n",
+      "dq : deque([(3, 1), (0, 2)])\n",
+      "dq : deque([(3, 1), (0, 2), (1, 2)])\n",
+      "dq : deque([(3, 1), (0, 2), (1, 2), (3, 2)])\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : []\n",
+      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2)])\n",
+      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2)])\n",
+      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2), (4, 2)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3)])\n",
+      "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3), (3, 3)])\n",
+      "\n",
+      "y : 1,  d : 2,  ans_list : []\n",
+      "y : 1,  d : 2,  ans_list : [2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
