--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,6 +274,61 @@
     "                dq.append((v, nd))\n",
     "                #print(f\"dq : {dq}\")\n",
     "        #print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(start, end):\n",
+    "    chk = [[False] * N for _ in range(N)]\n",
+    "    chk[start][0] = chk[0][start] = True\n",
+    "    \n",
+    "    ans_list = []\n",
+    "    dq = deque()\n",
+    "    dq.append((start, 0))\n",
+    "    print(f\"start : {start},  end : {end},   d : 0,  ans_list : {ans_list}\")\n",
+    "    print()   \n",
+    "    \n",
+    "    while dq:\n",
+    "        y, d = dq.popleft()\n",
+    "        print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "        \n",
+    "        if end == y:            \n",
+    "            ans_list.append(d) \n",
+    "            print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "            #return ans_list\n",
+    "                   \n",
+    "        nd = d + 1        \n",
+    "        for v in friends_dict[y]:\n",
+    "            if not chk[y][v] and not chk[v][y]:\n",
+    "                chk[y][v] = chk[v][y] = True            \n",
+    "                dq.append((v, nd))\n",
+    "                print(f\"dq : {dq}\")\n",
+    "        print()\n",
+    "    return ans_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bfs(0, 1)"
    ]
   },
   {
@@ -326,14 +381,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start : 0,  end : 1,   d : 0,  ans_list : []\n",
+      "start : 0,  end : 4,   d : 0,  ans_list : []\n",
       "\n",
       "y : 0,  d : 0,  ans_list : []\n",
       "dq : deque([(2, 1)])\n",
@@ -347,7 +402,11 @@
       "dq : deque([(1, 2), (3, 2), (4, 2)])\n",
       "\n",
       "y : 1,  d : 2,  ans_list : []\n",
-      "y : 1,  d : 2,  ans_list : [2]\n"
+      "\n",
+      "y : 3,  d : 2,  ans_list : []\n",
+      "\n",
+      "y : 4,  d : 2,  ans_list : []\n",
+      "y : 4,  d : 2,  ans_list : [2]\n"
      ]
     },
     {
@@ -356,13 +415,13 @@
        "[2]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bfs(0, 1)"
+    "bfs(0, 4)"
    ]
   },
   {
@@ -660,6 +719,44 @@
       ]
      },
      "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kevin = []\n",
+    "\n",
+    "for i in range(5):\n",
+    "    sum = 0\n",
+    "    for j in range(5):\n",
+    "        if j == i:\n",
+    "            continue\n",
+    "        sum += bfs(i, j)[0]\n",
+    "    kevin.append(sum)\n",
+    "    \n",
+    "print(kevin)\n",
+    "kevin.index(min(kevin)) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 8, 6, 6, 8]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
